--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,14 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
-backend/node_modules
-client/node_modules
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules/
 
 # dotenv environment variables file
-.env
+backend/.env
 
 # todos
 TODO
 
 #eslint
 client/.eslintrc.json
+
+#vscode
+.vscode
