--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "styled-components": "^3.4.3"
