fix search route bug when refreshed and add some basic styles to home route

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "googleapis": "^32.0.0",
     "moment": "^2.22.2",
     "plyr": "^3.4.3",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
