--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,11 +8,10 @@
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
             "jsx": true
         },
-        "sourceType": "module",
-        "ecmaVersion": 8
+        "ecmaVersion": 2018,
+        "sourceType": "module"
     },
     "plugins": [
         "react"
@@ -33,6 +32,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error"
     }
 }
