--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node app.js\" \"cd ../client && npm start\""
+    "start": "node app.js",
+    "devStart": "concurrently \"node app.js\" \"cd ../client && npm start\""
   },
   "author": "Daron McIntosh",
   "license": "ISC",
