--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "ajv": "^6.5.3",
+    "eslint": "^4.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "googleapis": "^32.0.0",
     "moment": "^2.22.2",
     "plyr": "^3.4.3",
