--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node app.js && cd client && npm install && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "devStart": "concurrently \"node app.js\" \"cd ../client && npm start\""
   },
