--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "spotify webplayer but for youtube",
   "main": "app.js",
   "scripts": {
+    "preinstall": "npm install pm2 -g",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "pm2-runtime app.js --max-memory-restart 450M",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "devStart": "concurrently \"node app.js\" \"cd ../client && npm start\""
   },
