--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "googleapis": "^32.0.0",
+    "heroku-ssl-redirect": "0.0.4",
     "moment": "^2.22.2",
     "youtube-audio-stream": "^0.2.0"
   },
