--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
-    "ajv": "^6.5.3",
-    "eslint": "^4.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "googleapis": "^32.0.0",
-    "moment": "^2.22.2",
-    "plyr": "^3.4.3",
-    "react": "^16.4.1",
-    "react-contextmenu": "^2.9.3",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "0.1.4",
+    "plyr": "^3.5.4",
+    "react": "^16.8.6",
+    "react-contextmenu": "^2.11.0",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "styled-components": "^3.4.3"
+    "react-scripts": "^3.0.0",
+    "redux": "^4.0.1",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +22,21 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-plugin-react": "^7.13.0"
+  },
   "proxy": "http://localhost:3001",
-  "homepage": "https://audio-youtube-react.herokuapp.com/"
+  "homepage": "https://audio-youtube-react.herokuapp.com/",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
