--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
-    "es6": true
+    "browser": true
   },
-  "extends": "plugin:react/recommended",
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
