--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "dev": "./node_modules/.bin/concurrently \"pm2 start app.js --max-memory-restart 450M\" \"cd client && npm start\"",
+    "dev": "./node_modules/.bin/concurrently \"node app.js\" \"cd client && npm start\"",
     "preinstall": "npm install pm2 -g",
     "start": "pm2-runtime app.js --max-memory-restart 450M",
     "build": "cd client && npm i && npm run build"
@@ -16,6 +16,7 @@
   "author": "Daron McIntosh",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^32.0.0",
@@ -27,8 +28,11 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-google": "^0.12.0"
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "nodemon": "^1.19.0"
   }
 }
