add morgan, move pm2 to local dependency, add debug script

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "dev": "./node_modules/.bin/concurrently \"node app.js\" \"cd client && npm start\"",
-    "preinstall": "npm install pm2 -g",
+    "debug": "concurrently \"nodemon --nolazy --inspect=9229 app.js\" \"cd client && npm start\"",
     "start": "pm2-runtime app.js --max-memory-restart 450M",
     "build": "cd client && npm i && npm run build"
   },
@@ -22,6 +21,8 @@
     "googleapis": "^32.0.0",
     "heroku-ssl-redirect": "0.0.4",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
+    "pm2": "^3.5.0",
     "through2": "^3.0.1",
     "xtend": "^4.0.1",
     "ytdl-core": "^0.29.1"
