--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,16 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch via NPM",
+      "name": "Launch Current File",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Server/Client",
       "runtimeExecutable": "npm",
-      "runtimeArgs": [
-        "run-script",
-        "debug"
-      ],
+      "runtimeArgs": ["run-script", "debug"],
       "port": 9229,
       "console": "integratedTerminal",
       "serverReadyAction": {
@@ -21,6 +25,6 @@
         "uriFormat": "http://localhost:3000",
         "webRoot": "${workspaceFolder}/client"
       }
-    },
+    }
   ]
 }
