--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "0.1.4",
     "plyr": "^3.5.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-contextmenu": "^2.11.0",
     "react-dom": "^16.8.6",
-    "react-redux": "^5.1.1",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   },
@@ -22,9 +23,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.13.0"
-  },
+  "devDependencies": {},
   "proxy": "http://localhost:3001",
   "homepage": "https://audio-youtube-react.herokuapp.com/",
   "browserslist": {
