--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "0.1.4",
+    "axios": "^0.18.0",
     "plyr": "^3.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
