add separate launch configs for server/client

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Debug Chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
       "type": "node",
       "request": "launch",
-      "name": "nodemon",
+      "name": "Debug Server",
       "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/nodemon",
       "program": "${workspaceFolder}/app.js",
       "restart": true,
