--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^3.18.0",
     "heroku-ssl-redirect": "0.0.4",
     "loglevel": "^1.6.1",
+    "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "pm2": "^3.5.0",
