--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "debug": "concurrently \"nodemon --nolazy --inspect app.js\" \"cd client && npm start\"",
+    "debug": "concurrently \"nodemon --nolazy --inspect=9229 app.js\" \"cd client && npm start\"",
     "start": "pm2-runtime app.js --max-memory-restart 450M",
     "build": "cd client && npm i && npm run build"
   },
