update dependencies update eslint and prettier config

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,12 +3,19 @@
     "browser": true
   },
   "parser": "babel-eslint",
-  "plugins": ["babel"],
+  "plugins": [
+    "babel"
+  ],
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     }
   },
-  "rules": { "jsx-a11y/media-has-caption": "off" }
+  "extends": [
+    "prettier/react"
+  ],
+  "rules": {
+    "jsx-a11y/media-has-caption": "off"
+  }
 }
