--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
   "parserOptions": {
     "ecmaVersion": 2017
   },
-  "extends": ["airbnb"]
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended"
+  ]
 }
