--- a/package.json
+++ b/package.json
@@ -15,30 +15,33 @@
   "author": "Daron McIntosh",
   "license": "ISC",
   "dependencies": {
-    "@isolution/youtube-audio-stream": "^1.3.0",
+    "@isolution/youtube-audio-stream": "^1.3.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "googleapis": "^43.0.0",
-    "helmet": "^3.21.1",
+    "googleapis": "^46.0.0",
+    "helmet": "^3.21.2",
     "heroku-ssl-redirect": "0.0.4",
-    "loglevel": "^1.6.4",
+    "loglevel": "^1.6.6",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "pm2": "^3.5.1",
+    "pm2": "^4.2.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "concurrently": "^5.0.0",
-    "eslint": "^6.5.1",
+    "concurrently": "^5.0.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "nodemon": "^1.19.3"
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1"
   }
 }
