fix livestream update README change two routes on backend to include /api (trending and results) fix play next context menu option when a user searches for a video move proptype validations outside of component body

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,10 @@
       "request": "launch",
       "name": "Debug Server/Client",
       "runtimeExecutable": "npm",
-      "runtimeArgs": ["run-script", "debug"],
+      "runtimeArgs": [
+        "run-script",
+        "debug"
+      ],
       "port": 9229,
       "restart": true,
       "console": "integratedTerminal",
@@ -49,7 +52,10 @@
   "compounds": [
     {
       "name": "Debug Server/Client v2",
-      "configurations": ["Debug Server", "Debug Client"]
+      "configurations": [
+        "Debug Server",
+        "Debug Client"
+      ]
     }
   ]
 }
